# python-asciistuff

./: .coveragerc  .travis.yml  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: pypi-publish.yml  python-package.yml
asciistuff/: __common__.py  __info__.py  __init__.py  banner.py  cowsay.py  file.py  image.py  lolcat.py  quote.py
docs/: file.md  functions.md  index.md  mkdocs.yml  objects.md
docs/pages/: file.md
requirements/: base.txt  python2.txt  python3.txt
src/asciistuff/: VERSION.txt  __common__.py  __info__.py  banner.py  cowsay.py  file.py  image.py  quote.py
tests/: test_banner.py  test_cowsay.py  test_file.py  test_image.py  test_init.py  test_lolcat.py  test_quote.py
