[metadata]
name = asciistuff
version = attr: asciistuff.__info__.__version__
author = Alexandre D'Hondt
author-email = alexandre.dhondt@gmail.com
home-page = https://github.com/dhondta/asciistuff
description = Library for producing ASCII arts from a text or an image
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    python
    development
    programming
    ascii
    art
    image
    banner
    quote
license = AGPLv3
license-file = LICENSE
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = True
install_requires =
    cowpy
    Pillow
    PyFiglet
    termcolor
    terminaltables
setup-requires = setuptools
python-requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*!=3.4.*,<4

[options.package_data]
* = *.txt

[options.entry_points]
console_scripts = 
    asciistuff = asciistuff:main
