[metadata]
name = asciistuff
version = file: src/asciistuff/VERSION.txt
author = Alexandre D'Hondt
author-email = alexandre.dhondt@gmail.com
home-page = https://github.com/dhondta/python-asciistuff
description = Library for producing ASCII arts from a text or an image
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    python
    development
    programming
    ascii
    art
    image
    banner
    quote
    cowsay
license = GPLv3
license-file = LICENSE
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = False
install_requires =
    colorama
    cowpy<=1.0.2; python_version=='2.7'
    cowpy>=1.1.2; python_version>='3.6'
    pillow==6.2.2; python_version=='2.7'
    pillow>=8.2.0; python_version>='3.6'
    PyFiglet
    termcolor
    terminaltables
setup-requires = setuptools
python-requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*,!=3.5.*,<4

[options.package_data]
* = *.txt

[options.entry_points]
console_scripts = 
    asciistuff = asciistuff:main
